--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-modal": "^3.14.4",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
+    "react-toastify": "^8.1.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
