Bug Fixes and Clean Up
Fixed a bug causing words with 2 of the same letter to show both
as correct even when one was in the wrong spot. Added some clean up
and updated the icons, index, and manifest.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Word Guesser",
+  "name": "Word Guesser by Hunter Bennett",
   "icons": [
     {
       "src": "favicon.ico",
@@ -8,14 +8,9 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "log-icon.png",
       "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "68x68"
     }
   ],
   "start_url": ".",
